--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="success_parag">"Η ενέργειά σας \n ολοκληρώθηκε με επιτυχία"</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="spinner_prompt">Please pick</string>
+
 </resources>
