--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,10 @@
     <string name="description">Περιγραφή</string>
     <string name="cost">Κόστος/ανά συνεδρία</string>
     <string name="success_parag">"Η ενέργειά σας \n ολοκληρώθηκε με επιτυχία"</string>
+    <string name="login">Login</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="buttonLogin">Σύνδεση</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="spinner_prompt">Please pick</string>
